# physical_debugging_camera

./: .gitignore  CMakeLists.txt  README.md  camera_config.json
app/: CMakeLists.txt  camera_stream.cpp
include/: camera_capture.hpp  network_connection.hpp  video_decoding.hpp  video_encoding.hpp
src/: CMakeLists.txt  camera_capture.cpp  network_connection.cpp  video_decoding.cpp  video_encoding.cpp
